--- a/mapa_page.html
+++ b/mapa_page.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
+
+
 <html>
 <head>
-  <meta name="description" content="jQuery Geo  geometry functions" />
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
-  <title>jQuery Geo geometry functions</title>
-  
+  <title>Probando Jquery geo</title>
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="http://code.jquerygeo.com/jquery.geo-1.0.0-b2.min.js"></script>
+  <script src="jQueryGeo_controlador.js"></script>
+  <script src="jQueryGeo_controlador.js"></script>
+  <link href="estilo_prueba.css" rel="stylesheet" type="text/css" />
 </head>
-  
 <body>
-  
-  <div id="map">
-    
-  
-  </div>
-    
+  <div id="map" ></div>
 </body>
 </html>
   
